# eolmani

./: .env.example  .gitignore  Dockerfile  PROGRESS.md  PROJECT.md  README.md  REPORT.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  database.py  main.py
app/api/: prices.py
app/models/: __init__.py  item.py  price_history.py
app/scheduler/: price_collector.py
app/schemas/: price.py
app/services/: item_origins.py  kamis_client.py  price_service.py  price_stats_service.py  regions.py  season_service.py  signal_service.py  weather_client.py  weather_impact_service.py
app/templates/: base.html  index.html  item_detail.html
migrations/: env.py
migrations/versions/: 59633ef133e1_add_kamis_code_fields_to_items.py  759ac747348b_add_avg_year_price_to_items.py  75ee978040c8_create_items_and_price_history_tables.py  a3f82c9b1d4e_add_group_fields_to_items.py  b1c4d8e2f5a9_add_region_code_to_price_history.py
scripts/: backfill.py  seed_items.py  test_kamis.py
